FIX : chatting card Box for overflow

--- a/frontend/src/styles/Chatting.scss
+++ b/frontend/src/styles/Chatting.scss
@@ -65,6 +65,12 @@ $ChattingDrawerWidth: 500px;
 
       .page-body {
         height: 85%;
+        display: flex;
+        justify-content: center;
+
+        .chatting-card {
+          width: 85%;
+        }
       }
 
       .page-footer {
